--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="65dp"
         android:fontFamily="serif-monospace"
-        android:text="bansal.aar@northeastern.edu"
+        android:text="@string/email"
         android:textAllCaps="false"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/aboutMe"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="198dp"
         android:onClick="onClickBtn"
-        android:text="About Me"
+        android:text="@string/button_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
